<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ffffff">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:contentDescription="@string/textview"
                    android:id="@+id/cancelDetailImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/close"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/apply_leave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply_for_leave"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/listViewFrame"
                    />

                <TextView
                    android:id="@+id/employee_designation_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="18sp"
                    android:text="@string/employee_designation"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/employee_name_text_view" />

                <TextView
                    android:id="@+id/leaveInfoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leave_information"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/employee_designation_text_view"
                    />

                <FrameLayout
                    android:id="@+id/listViewFrame"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/leaveInfoText">
                    
                   

                    <ListView
                        android:id="@+id/list_leave_status"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        tools:ignore="NestedScrolling" />

                    <TextView
                        android:id="@+id/noLeaveStatusData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/no_leaves_status"
                        android:visibility="invisible" />
                </FrameLayout>

                <TextView
                    android:id="@+id/employee_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="80dp"
                    android:text="@string/employee_name"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/leaveAddSection"
                    android:layout_width="match_parent"

                    android:visibility="invisible"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintTop_toBottomOf="@id/apply_leave"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                       
                        android:weightSum="10">

                        <EditText
                            android:id="@+id/fromDateEditText"
                            android:layout_width="0dp"
                            android:layout_weight="4"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:clickable="true"
                            android:focusable="true"
                            android:inputType="date"
                            android:hint="@string/from" />

                        <EditText
                            android:id="@+id/toDateEditText"
                            android:layout_width="0dp"
                            android:layout_weight="4"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:ems="10"
                            android:hint="@string/to"
                            android:inputType="date" />
                        <Button
                            android:layout_weight="2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            
                            android:textSize="10sp"

                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            
                            android:background="@color/colorPrimary"
                            android:text="@string/save"
                            android:textAllCaps="false"
                            android:textColor="@android:color/white"
                            android:id="@+id/save_apply_leave"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/leave_reason_editText"
                            android:layout_width="0dp"
                            android:layout_weight="8"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/leave_reason"
                             />
                        
                        <Button
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"

                            android:background="@android:color/white"
                            android:text="@string/cancel"
                            android:textAllCaps="false"
                            android:textColor="@color/colorPrimary"
                            android:elevation="9dp"
                            android:textSize="10sp"
                            android:id="@+id/cancel_apply_leave"/>
                    </LinearLayout>
                </LinearLayout>

                <android.support.constraint.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="206dp" />
            </android.support.constraint.ConstraintLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/thumbnailImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"

        android:background="@drawable/circular_image"
        android:elevation="9dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:src="@drawable/android_icon"

        android:thicknessRatio="1.9"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"

        app:layout_constraintTop_toTopOf="parent"/>


</android.support.constraint.ConstraintLayout>